test/compilable/imports/g313public.d
module imports.g313public;
void bug()
{
}
