test/fail_compilation/imports/fail357a.d
module imports.fail357a;

void foo()
{
}
